--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
         # https://github.com/actions/runner-images/blob/main/images/macos/macos-13-Readme.md
         # https://github.com/actions/runner-images/blob/main/images/macos/macos-14-arm64-Readme.md
         # https://github.com/actions/runner-images/blob/main/images/macos/macos-15-arm64-Readme.md
+        #
+        # Xcode version comparison: https://en.wikipedia.org/wiki/Xcode
         os: [macos-13, macos-14, macos-15]
     name: Build
     runs-on: ${{ matrix.os }}
